# termucoin

./: CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  configure.ac
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-all.yml  build.yml  ci.yml  ci.yml.zp  codeql-analysis.yml
build-aux/m4/: bitcoin_qt.m4  termubit_experimental.m4  termubit_find_bdb53.m4  termucoin_experimental.m4
contrib/: README.md  gitian-build.sh  install_db5.sh  subtrees.json  termucoind.bash-completion
contrib/debian/: README.md  control  copyright  dogecoin-qt.desktop  rules  termubit-qt.desktop  termubit-qt.manpages  termubitd.examples  termubitd.install  termubitd.lintian-overrides  termucoin-qt.install  termucoin-qt.lintian-overrides  termucoin-qt.protocol  termucoin-tx.bash-completion  termucoin-tx.install  termucoin-tx.manpages  termucoind.bash-completion  termucoind.manpages  watch
contrib/devtools/: check-translations.py  gen-dogecoin-conf.sh  gen-manpages.sh  gen-termucoin-conf.sh  security-check.py  symbol-check.py  test-security-check.py  test-symbol-check.py  utils.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  dogecoind.local.service  dogecoind.opt.service  dogecoind.service  org.termubit.termubitd.plist  termubitd.conf  termucoind.init  termucoind.local.service  termucoind.openrc  termucoind.openrcconf  termucoind.opt.service  termucoind.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: DS_Store  README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/rpm/: bitcoin.spec
contrib/seeds/: generate-seeds.py  nodes_main.txt
contrib/snap/: README.md  (+1 more)
depends/: funcs.mk
doc/: Doxyfile  FAQ.md  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-archlinux.md  build-fedora.md  build-macos.md  build-nixos.md  build-openbsd.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  experiments.md  fee-recommendation.md  files.md  fuzzing.md  getting-started.md  gitian-building.md  init.md  reduce-memory.md  reduce-traffic.md  release-process.md  rpc-maturity.md  shared-libraries.md  tor.md  translation_strings_policy.md  travis-ci.md  zmq.md
qa/: README.md
share/: setup.nsi.in  termubit.conf
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.cpp  amount.h  attributes.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  clientversion.h  compat.h  dogecoin-fees.cpp  dogecoin-fees.h  dogecoin.cpp  dogecoin.h  hash.cpp  httpserver.cpp  init.cpp  key.cpp  key.h  miner.cpp  miner.h  net.cpp  net.h  net_processing.cpp  net_processing.h  netaddress.cpp  netaddress.h  netbase.cpp  netbase.h  pow.cpp  (+26 more)
src/compat/: arm_acle_selector.h  glibc_compat.cpp
src/consensus/: consensus.h  params.h
src/crypto/: hmac_sha256.h  scrypt.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/policy/: fees.h  policy.cpp  policy.h
src/primitives/: block.h  pureheader.h  transaction.h
src/qt/: addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  importkeysdialog.cpp  importkeysdialog.h  intro.cpp  modaloverlay.cpp  openuridialog.cpp  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentserver.cpp  paymentserver.h  peerdialog.cpp  peerdialog.h  peertablemodel.cpp  peertablemodel.h  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsdialog.h  splashscreen.cpp  trafficgraphwidget.cpp  (+15 more)
src/qt/forms/: intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_ca.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el.ts  bitcoin_en.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_ku_IQ.ts  bitcoin_ky.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  bitcoin_mk_MK.ts  bitcoin_mn.ts  bitcoin_ms_MY.ts  (+24 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/icons/: termucoin.icns
src/qt/test/: rpcnestedtests.cpp  test_main.cpp  uritests.cpp
src/rpc/: auxcache.cpp  auxcache.h  auxpow.cpp  blockchain.cpp  blockchain.h  client.cpp  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h
src/support/: experimental.h  lockedpool.cpp
src/test/: addrman_tests.cpp  amount_tests.cpp  auxcache_tests.cpp  auxpow_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  dogecoin_tests.cpp  hash_tests.cpp  main_tests.cpp  mempool_tests.cpp  miner_tests.cpp  net_tests.cpp  netbase_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  rpc_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  scrypt_tests.cpp  termucoin_tests.cpp  test_bitcoin.cpp  transaction_tests.cpp  txvalidationcache_tests.cpp  util_tests.cpp  versionbits_tests.cpp
src/test/data/: base58_keys_valid.json  bitcoin-util-test.json
src/wallet/: coincontrol.h  rpcdump.cpp  rpcutil.cpp  rpcutil.h  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqpublishnotifier.cpp
(+124 files in other folders)
